--- a/views/auth/styles/auth.css
+++ b/views/auth/styles/auth.css
@@ -1,52 +1,97 @@
-body {
-	background: rgb(223, 218, 218) !important;	
-}
-
-a{
-    text-decoration: none;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-}
-span{
-    padding: 10px;
-    background: rgb(6, 103, 199);
-    color: white;
-    min-width: 50px;
-    max-height: 43px;
-    text-align: center;
-
-}
-.input-container {
-    display: -ms-flexbox; 
-    display: flex;
-    width: 100%;
-    margin-bottom: 15px;
+html, body{
+  background-image: url(/views/auth/assets/background.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+    overflow: hidden;
+  height: 100%;
+  /*width: 100%;*/
+  font-family: 'Raleway', sans-serif;
   }
-
-.form-signin {
-  max-width: 380px;
-  padding: 15px 35px 45px;
-  margin: 0 auto;
-  background-color: #fff;
-  border: 1px solid rgba(0,0,0,0.1);  }
-
-	.form-control {
-	  position: relative;
-	  font-size: 16px;
-	  height: auto;
-	  padding: 10px;
-		
-	}
-
-	input[type="text"] {
-	  margin-bottom: -1px;
-	  border-bottom-left-radius: 0;
-	  border-bottom-right-radius: 0;
-	}
-
-	input[type="password"] {
-	  margin-bottom: 20px;
-	  border-top-left-radius: 0;
-	  border-top-right-radius: 0;
-	}
-
+  
+  .container{
+  height: 100%;
+  align-content: center;
+  }
+  
+  .card{
+  height: 370px;
+  margin-top: 5em;
+  margin-bottom: 5px;
+  border-radius: 20px;
+  width: 400px;
+  background-color: rgba(0,0,0,0.7) !important;
+  }
+  
+  .social_icon span{
+  font-size: 60px;
+  margin-left: 10px;
+  color: #3acaa6;
+  }
+  
+  .social_icon span:hover{
+  color: white;
+  cursor: pointer;
+  }
+  
+  .card-header h3{
+  color: white;
+  }
+  
+  .social_icon{
+  position: absolute;
+  right: 20px;
+  top: -45px;
+  }
+  
+  .input-group-prepend span{
+  width: 50px;
+  background-color: #858a87;
+  color: black;
+  border:0 !important;
+  }
+  
+  input:focus{
+  outline: 0 0 0 0  !important;
+  box-shadow: 0 0 0 0 !important;
+  
+  }
+  
+  .remember{
+  color: white;
+  }
+  
+  .remember input
+  {
+  width: 20px;
+  height: 20px;
+  margin-left: 15px;
+  margin-right: 5px;
+  }
+  
+  .login_btn{
+  color: black;
+  background-color: #858a87;
+  width: 100px;
+  }
+  
+  .login_btn:hover{
+  color: black;
+  background-color: white;
+  }
+  
+  .links{
+  color: white;
+  }
+  
+  .links a{
+  margin-left: 4px;
+  }
+  
+  @media (max-width: 760px){
+      html, body{
+          background-image: url('https://images.unsplash.com/photo-1482066490729-6f26115b60dc?ixlib=rb-1.2.1&auto=format&fit=crop&w=702&q=80');
+          background-size: cover;
+          background-repeat: no-repeat;
+          height: 600px;
+      }
+  }
